navigating to the Html Webpage

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <h1>Welcome</h1>
     <p>Select a project:</p>
     <ul>
-      <li><a href="AI_forge/">AI Forge Landing Page</a></li>
+      <li><a href="AI_Forge/">AI Forge Landing Page</a></li>
       <li><a href="Restuarent/">Nutrition Website</a></li>
     </ul>
   </body>
